--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6, figure {
-  color: #fff;
+  color: #F14E95;
   font-family: 'Mitr', sans-serif !important;
   /* font-family: "Work Sans", Arial, sans-serif; */
   font-weight: 400;
@@ -407,7 +407,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-counter .event-wrap,
 #fh5co-event .event-wrap {
   border: 2px solid rgba(255, 255, 255, 0.5);
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 1);
   padding: 20px;
   width: 100%;
   float: left;
@@ -425,7 +425,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-counter .event-wrap h3,
 #fh5co-event .event-wrap h3 {
   font-size: 30px;
-  color: #fff;
+  color: #F14E95;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   display: block;
   padding-bottom: 20px;
@@ -436,12 +436,12 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-event .event-wrap p,
 #fh5co-event .event-wrap span {
   display: block;
-  color: rgba(255, 255, 255, 0.8);
+  color:  #F14E95;  /*rgba(255, 255, 255, 0.8); */
   font-size: 20px;
 }
 #fh5co-counter .event-wrap i,
 #fh5co-event .event-wrap i {
-  color: white;
+  color: #F14E95;
   font-size: 20px;
 }
 #fh5co-counter .event-wrap .event-col,
