--- a/css/style.css
+++ b/css/style.css
@@ -1056,7 +1056,7 @@ form label {
 }
 .heart i {
   font-size: 20px;
-  background: #000;
+  background: #fff;
   padding: 20px;
   color: #F14E95;
   -webkit-border-radius: 50%;
